refactored working tree

--- a/project/makefile
+++ b/project/makefile
@@ -1,7 +1,7 @@
-# compilation directions 
+#compilation directions
 
 CXX = g++
 CXXFLAGS = -std=c++11 -pthread
 
-program: musicalchairs.o cust_head.h
+program: musicalchairs.cpp 
 	$(CXX) $(CXXFLAGS) -o $@ $^
