--- a/project/makefile
+++ b/project/makefile
@@ -3,5 +3,9 @@
 CXX = g++
 CXXFLAGS = -std=c++11 -pthread
 
-program: musicalchairs.cpp 
-	$(CXX) $(CXXFLAGS) -o $@ $^
+#program: musicalchairs.cpp 
+#	$(CXX) $(CXXFLAGS) -o $@ $^
+
+program: musicalchairs.cpp
+	$(CXX) $(CXXFLAGS) -o $@ $^ -O2
+
